# casbench

./: README.md  README.rst  pyproject.toml
.github/workflows/: lint.yml  test.yml
benchmarks/calculus/: differentiation.yaml
src/casbench/: __init__.py  exception.py  lexer.py
tests/: test_lexer.py
